--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Fourier\'s Phone</string>
-    <string name="do_button">Do</string>
+    <string name="send_button">Send</string>
+    <string name="receive_button">Receive</string>
+    <string name="mode_switch">Mode</string>
 </resources>
