Małe poprawki jeszcze

--- a/private/przypadki_uzycia.tex
+++ b/private/przypadki_uzycia.tex
@@ -57,7 +57,7 @@ Aktorzy znajdują się we względnie cichym miejscu z ośrodkiem umożliwiający
 \subsection{Potencjalne problemy}
 \subsubsection{Niekompletny odbiór}
 \normalfont
-Jeżeli jeden z odbiorców rozpocznie odbieranie transmisji za późno lub nadawca rozpocznie nadawanie za wcześnie mechanizmy zabezpieczające (oddzielne dźwięki startu i końca nadawania, sumy kontrolne) powinny doprowadzić do odebrany nieodebrania żadnego pliku. W takim przypadku zaleca się retransmisję pliku.
+Jeżeli jeden z odbiorców rozpocznie odbieranie transmisji za późno lub nadawca rozpocznie nadawanie za wcześnie mechanizmy zabezpieczające (oddzielne dźwięki startu i końca nadawania, sumy kontrolne) powinny doprowadzić do nieodebrania żadnego pliku. W takim przypadku zaleca się retransmisję.
 \subsubsection{Zakłócenie odbioru}
 \normalfont
 Jeżeli nadawca i odbiorca dojdą do wniosku że z powodu zanieczyszczenia hałasem mimo, iż plik doszedł, to może być uszkodzony, zaleca się niezapisywanie pliku i retransmisję.
@@ -82,7 +82,7 @@ Oczywiście jest to jedynie przykład; zachęcamy do poszukiwania własnych śro
 	\item \bf Sztukmistrz \normalfont uruchamia drugie urządzenie w trybie nadawania wybierając \it Pana Tadeusza \normalfont.
 	\item \bf Sztukmistrz \normalfont zaczyna śpiewać \it Odę do Radości \normalfont zakłócając tym samym transmisję.
 	\item Po przepuszczeniu wynikowej wiadomości przez autokorektę, improwizuje przedstawienie oparte o powstały tekst.
-	\item \bf Widzowie \normalfont są \bf zachwyceni \normalfont.
+	\item \bf Widzowie \normalfont są \bf zachwyceni\normalfont.
 \end{enumerate}
 
 \subsection{Potencjalne problemy}
